<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/item_movie_intro" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/actors"/>

            <TextView
                android:id="@+id/textViewMovieActors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/genre"/>

            <TextView
                android:id="@+id/textViewMovieGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewMovieDurationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/duration"/>

            <TextView
                android:id="@+id/textViewMovieDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewMovieRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/ratings"/>

            <GridLayout
                android:id="@+id/gridLayoutMovieRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:text="@string/press"/>

                <RatingBar
                    android:id="@+id/ratingBarMoviePress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    style="?android:attr/ratingBarStyleSmall"
                    android:numStars="5"
                    android:stepSize="0.1"
                    android:rating="3.5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:text="@string/users"/>

                <RatingBar
                    android:id="@+id/ratingBarMovieUsers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    style="?android:attr/ratingBarStyleSmall"
                    android:numStars="5"
                    android:stepSize="0.1"
                    android:rating="3.5" />

            </GridLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/links"/>

            <GridLayout
                android:id="@+id/gridLayoutMovieLinks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:columnCount="3"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>